--- a/templates/siteground-j16-38/css/template.css
+++ b/templates/siteground-j16-38/css/template.css
@@ -1,8 +1,8 @@
 html,body{height:100%;}
 body,#contact-slider .panel,.tip-wrap,#sgmenu ul.menu li ul li a:hover span{background:#fff;}
-body{color: #999999;
-    font-family: Tahoma,Verdana,Arial,sans-serif;
-    font-size: 11px;
+body{color: #444444;
+    font-family: Arial,Tahoma,Verdana,sans-serif;
+    font-size: 12px;
     line-height: 1.3em;}
 body,ul,img,a,form,h3,dl dd,fieldset,.module p,#header h1,.maincol_w_left .cont,.maincol_w_right .cont,#login-form,#login-form ul li,ul.menu,.item .readmore,td p,#sgmenu ul.menu li a span,#system-message,#footer p,#contact-slider .panel h3,.pagination .counter,#form-login-remember,.module .menu,.module_menu .menu{margin:0;}
 body,ul,img,a,form,fieldset,#wrapper,#search .search,.rightcol,.leftcol,fieldset.userdata p,fieldset.userdata,ul.menu,.maincol h2 a,.maincol h2,#member-registration dd{padding:0;}
@@ -95,7 +95,7 @@ button,textarea,input,.module .menu li,.module_menu .menu li,#system-message dd.
 #header h1,#search,.top-menu,#breadcrumbs,.module .search .button,legend.element-invisible,#sgmenu ul li ul{position:absolute;}
 #header h1,td.hits{text-align:center;}
 #header h1 a:hover,#header h1 a:visited,#header h1 a:link,#header h1 a{
-	color: #A6DCFF;
+	color: #6E92AA;
     font-family: Tahoma,Verdana,Arial,sans-serif;
     font-weight: bold;
     font-size: 20px;
