--- a/templates/siteground-j16-38/css/template.css
+++ b/templates/siteground-j16-38/css/template.css
@@ -2,7 +2,7 @@ html,body{height:100%;}
 body,#contact-slider .panel,.tip-wrap,#sgmenu ul.menu li ul li a:hover span{background:#fff;}
 body{color: #444444;
     font-family: Arial,Tahoma,Verdana,sans-serif;
-    font-size: 12px;
+    font-size: 12pt;
     line-height: 1.3em;}
 body,ul,img,a,form,h3,dl dd,fieldset,.module p,#header h1,.maincol_w_left .cont,.maincol_w_right .cont,#login-form,#login-form ul li,ul.menu,.item .readmore,td p,#sgmenu ul.menu li a span,#system-message,#footer p,#contact-slider .panel h3,.pagination .counter,#form-login-remember,.module .menu,.module_menu .menu{margin:0;}
 body,ul,img,a,form,fieldset,#wrapper,#search .search,.rightcol,.leftcol,fieldset.userdata p,fieldset.userdata,ul.menu,.maincol h2 a,.maincol h2,#member-registration dd{padding:0;}
