--- a/templates/siteground-j16-38/css/template.css
+++ b/templates/siteground-j16-38/css/template.css
@@ -300,7 +300,7 @@ table.weblinks td,table{border-collapse:collapse;}
 li.active a span, li a:hover span{
 	color: rgb(54, 88, 111);;
     font-size: 14px;
-    line-height: 22px;
+    line-height: 18px;
     text-decoration: underline;}
 .feed{padding:5px !important;}
 body,button,textarea,input,#mod-search-searchword,#footer a,#footer p{color:#333333;}
@@ -381,3 +381,14 @@ input.inputbox, textarea.inputbox  {background: #ebebeb; background: 1px solid #
     line-height: 19px;
     margin: 6px 8px 0 0;
     width: 44px;}
+
+.mod_events_latest_content a:visited {
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+.mod_events_latest_content a:link {
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
