--- a/templates/siteground-j16-38/css/template.css
+++ b/templates/siteground-j16-38/css/template.css
@@ -385,16 +385,16 @@ input.inputbox, textarea.inputbox  {background: #ebebeb; background: 1px solid #
 .mod_events_latest_content a:visited {
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: #333333;
 }
 .mod_events_latest_content a:link {
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: #333333;
 }
 
 .mod_events_latest_date {
     font-size: 11px;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333333;
 }
